# Homework4

./: CMakeLists.txt  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: solver.cpp
